[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/reader.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = -130.0
script = ExtResource( 1 )

[node name="Open Url" type="Button" parent="."]
margin_left = 19.6792
margin_top = 9.66697
margin_right = 89.6792
margin_bottom = 29.667
text = "Open Url"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RSSField" type="TextEdit" parent="."]
margin_left = 6.0
margin_top = 385.0
margin_right = 1001.0
margin_bottom = 459.0

[node name="ItemList" type="ItemList" parent="."]
margin_left = 10.4258
margin_top = 57.1812
margin_right = 348.426
margin_bottom = 218.181

[node name="DescriptionField" type="TextEdit" parent="."]
margin_left = 426.0
margin_top = 58.0
margin_right = 998.0
margin_bottom = 264.0
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.964706, 0.94902, 0.94902, 1 )
readonly = true
wrap_enabled = true

[node name="InputRSS" type="LineEdit" parent="."]
margin_left = 143.0
margin_top = 6.0
margin_right = 700.0
margin_bottom = 30.0
text = "https://abcnews.go.com/abcnews/topstories"

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 110.0
margin_top = 308.0
margin_right = 989.0
margin_bottom = 322.0

[node name="Label" type="Label" parent="."]
margin_left = 22.393
margin_top = 306.611
margin_right = 62.393
margin_bottom = 320.611
text = "link"

[node name="ConfigWindow" type="WindowDialog" parent="."]
visible = true
margin_left = 192.694
margin_top = 198.0
margin_right = 695.694
margin_bottom = 452.0

[node name="CurrentURLLabel" type="Label" parent="ConfigWindow"]
margin_left = 17.4592
margin_top = 29.2983
margin_right = 218.459
margin_bottom = 43.2983
text = "Current URL"

[node name="InputDelRSS" type="LineEdit" parent="ConfigWindow" groups=[
"Persist",
]]
margin_left = 23.0
margin_top = 65.0
margin_right = 481.0
margin_bottom = 89.0

[node name="DeleteButton" type="Button" parent="ConfigWindow"]
margin_left = 418.104
margin_top = 99.7208
margin_right = 473.104
margin_bottom = 119.721
text = "Delete"

[node name="SaveButton" type="Button" parent="ConfigWindow"]
margin_left = 214.52
margin_top = 210.699
margin_right = 255.52
margin_bottom = 230.699
text = "Save"

[node name="ConfigButton" type="Button" parent="."]
margin_left = 962.338
margin_top = 8.18778
margin_right = 974.338
margin_bottom = 28.1878
text = "Config"

[connection signal="pressed" from="Open Url" to="." method="_on_Open_Url_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="ConfigWindow/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="ConfigWindow/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_ConfigButton_pressed"]
